@@ -1,5 +1,13 @@
 2007-04-05  Vitaly Alexeev <tishka92@yahoo.com>
 
+	* gameswf/gameswf_xmlsocket.cpp
+	* gameswf/gameswf_xml.*
+	* gameswf/gameswf_test_ogl.cpp
+	* gameswf/as_classes/as_MovieClipLoader.cpp
+	fixed bug #1404428 [LIBXML2 support no longer compiles]
+
+2007-04-05  Vitaly Alexeev <tishka92@yahoo.com>
+
 	* gameswf/gameswf_impl.cpp,
 	* gameswf/gameswf_font.*: added tag 62 implementation (DefineFontInfo2)
 
